--- a/cyberpunk-2077.css
+++ b/cyberpunk-2077.css
@@ -2,6 +2,19 @@
   --glitched-duration: 0.9s;
 }
 
+body {
+  background-color: #f9f002;
+}
+
+/* Form fields */
+
+/* Scrollbar */
+
+/* Images frames */
+
+/* Textboxes */
+
+/* Titles */
 
 /* Buttons and links */
 
