Examples in html

--- a/cyberpunk-2077.css
+++ b/cyberpunk-2077.css
@@ -1,5 +1,6 @@
 :root {
   --glitched-duration: 0.9s;
+  --glitched-long-duration: 3s;
   --yellow-color: #f9f002;
   --orange-color: #ff9800;
   --border-color: #8ae66e;
@@ -52,7 +53,35 @@ body * {
 /* Separator */
 
 hr {
+  height: 14px;
+  background-color : grey;
+  width: 100%;
+  clip-path: polygon(1px 0px, 0px 0px, 0px 0px, 8px 14px, 13px 14px, 22px 7px, 42px 6px, 49px 1px, 100% 1px, 100% 0px, 42px 0px, 35px 5px, 22px 6px, 13px 13px, 9px 13px);
+  animation-name: hr;
+  animation-duration: var(--glitched-long-duration);
+  animation-iteration-count: infinite;
+  animation-timing-function: linear; 
+}
 
+@keyframes hr {
+  0% {
+    transform: skew(0deg);
+  }
+  15% {
+    transform: skew(0deg);
+  }
+  16% {
+    transform: skew(20deg);
+  }
+  20% {
+    transform: skew(20deg);
+  }
+  21% {
+    transform: skew(0deg);
+  }
+  100% {
+    right: 35px;
+  }
 }
 
 /* Images frames */
