--- a/cyberpunk-2077.css
+++ b/cyberpunk-2077.css
@@ -316,6 +316,84 @@ p.cyberpunk:hover:before {
   animation-timing-function: linear;
 }
 
+p.cyberpunk.scannedh,
+p.cyberpunk.scannedv {
+  position: relative;
+}
+
+p.cyberpunk.scannedh:after {
+  content: "";
+  position: absolute;
+  top: -30px;
+  left: 0px;
+  width: 100%;
+  height: 3px;
+  background-color: var(--border-color) !important;
+  box-shadow: 0px 0px 10px 4px var(--border-color);
+  animation-name: scannedh;
+  animation-duration: var(--glitched-long-duration);
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  animation-direction: alternate;
+}
+
+@keyframes scannedh {
+  0% {
+    top: -27px;
+  }
+  50% {
+  }
+  51% {
+  }
+  100% {
+    top: calc(100% + 12px);
+  }
+}
+
+p.cyberpunk.scannedv:after {
+  content: "";
+  position: absolute;
+  top: -30px;
+  left: 0px;
+  height: calc(100% + 55px);
+  width: 3px;
+  background-color: var(--border-color) !important;
+  box-shadow: 0px 0px 10px 4px var(--border-color);
+  animation-name: scannedv;
+  animation-duration: calc(var(--glitched-long-duration) * 3);
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  animation-direction: alternate;
+}
+
+@keyframes scannedv {
+  0% {
+    left: 0px;
+  }
+  50% {
+  }
+  51% {
+  }
+  100% {
+    left: 100%;
+  }
+}
+
+@keyframes hxafter {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+  }
+  51% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 ul.cyberpunk li {
   list-style: none;
   position: relative;
@@ -391,11 +469,11 @@ ul.cyberpunk li.glitched:nth-child(4n+4) {
 
 @keyframes liglitched {
   0% {
-    transform: skew(-5deg);
-    margin-left: -4px;
+    transform: skew(-3deg);
+    margin-left: -2px;
   }
   10% {
-    transform: skew(-5deg);
+    transform: skew(3deg);
     margin-left: inherit;
   }
   11% {
@@ -407,11 +485,11 @@ ul.cyberpunk li.glitched:nth-child(4n+4) {
     margin-left: inherit;
   }
   51% {
-    transform: skew(10deg);
+    transform: skew(3deg);
     margin-left: 5px;
   }
   59% {
-    transform: skew(10deg);
+    transform: skew(-3deg);
     margin-left: 5px;
   }
   60% {
@@ -420,6 +498,41 @@ ul.cyberpunk li.glitched:nth-child(4n+4) {
   }
   100% {
     transform: skew(0deg);
+  }
+}
+
+.cyberpunk a {
+  color: inherit;
+  text-decoration: none;
+  display: inline-block;
+  position: relative;
+}
+
+.cyberpunk a:after {
+  content: " ";
+  position: absolute;
+  bottom: -1px;
+  left: 0px;
+  width: 100%;
+  height: 1.5px;
+  background-color: var(--border-color);
+  box-shadow: 0px 0px 8px 3px var(--border-color);
+}
+
+.cyberpunk a:hover:after {
+  animation-name: scanneda;
+  animation-duration: var(--glitched-duration);
+  animation-iteration-count: infinite;
+  animation-timing-function: linear; 
+  animation-direction: alternate;
+}
+
+@keyframes scanneda {
+  0% {
+    bottom: -1px;
+  }
+  100% {
+    bottom: calc(100% + 1px);
   }
 }
 
@@ -632,88 +745,10 @@ p.cyberpunk:after {
   animation-timing-function: linear;
 }
 
-p.cyberpunk.scannedh,
-p.cyberpunk.scannedv {
-  position: relative;
-}
-
-p.cyberpunk.scannedh:after {
-  content: "";
-  position: absolute;
-  top: -30px;
-  left: 0px;
-  width: 100%;
-  height: 3px;
-  background-color: var(--border-color) !important;
-  box-shadow: 0px 0px 10px 4px var(--border-color);
-  animation-name: scannedh;
-  animation-duration: var(--glitched-long-duration);
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
-  animation-direction: alternate;
-}
-
-@keyframes scannedh {
-  0% {
-    top: -27px;
-  }
-  50% {
-  }
-  51% {
-  }
-  100% {
-    top: calc(100% + 12px);
-  }
-}
-
-p.cyberpunk.scannedv:after {
-  content: "";
-  position: absolute;
-  top: -30px;
-  left: 0px;
-  height: calc(100% + 55px);
-  width: 3px;
-  background-color: var(--border-color) !important;
-  box-shadow: 0px 0px 10px 4px var(--border-color);
-  animation-name: scannedv;
-  animation-duration: calc(var(--glitched-long-duration) * 3);
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
-  animation-direction: alternate;
-}
-
-@keyframes scannedv {
-  0% {
-    left: 0px;
-  }
-  50% {
-  }
-  51% {
-  }
-  100% {
-    left: 100%;
-  }
-}
-
 h3.cyberpunk:after,
 h4.cyberpunk:after {
   animation-direction: reverse;
   animation-duration: calc(var(--glitched-duration) / 2);
-}
-
-@keyframes hxafter {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 0;
-  }
-  51% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 1;
-  }
 }
 
 /* Buttons and links */
